--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -3,7 +3,11 @@
 
 @{
     ViewBag.Title = "Add Entry";
+
+  
 }
+
+
 
 <h2>@ViewBag.Title</h2>
 
@@ -24,7 +28,8 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.ActivityId, new {@class = "control-label"})
-                @Html.TextBoxFor(m => m.ActivityId, new {@class = "form-control"})
+                @Html.DropDownListFor(m => m.ActivityId, 
+                        (SelectList)ViewBag.ActivitiesSelectListItems, "", new {@class = "form-control"})
             </div>
 
             <div class="form-group">
