--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -11,7 +11,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-
+@Html.ValidationSummary("The following errors were found:", new { @class = "alert alert-danger" })
 
 @using (Html.BeginForm())
 {
@@ -29,7 +29,7 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.ActivityId, new {@class = "control-label"})
                 @Html.DropDownListFor(m => m.ActivityId, 
-                        (SelectList)ViewBag.ActivitiesSelectListItems, "", new {@class = "form-control"})
+                        (SelectList)ViewBag.ActivitiesSelectListItems, "", new {@class = "form-control"})"The"
             </div>
 
             <div class="form-group">
