--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -28,7 +28,7 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.ActivityId, new {@class = "control-label"})
                 @Html.DropDownListFor(m => m.ActivityId, 
-                        (SelectList)ViewBag.ActivitiesSelectListItems, "", new {@class = "form-control"})"The"
+                        (SelectList)ViewBag.ActivitiesSelectListItems, "", new {@class = "form-control"})
             </div>
 
             <div class="form-group">
